# evergreen_agents

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.agent  Dockerfile.frontend  Dockerfile.pipeline  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: ci.yml
frontend/: .env.local.example  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/customers/: page.tsx
frontend/app/customers/[name]/: page.tsx
frontend/app/roadmap/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: app-sidebar.tsx  providers.tsx
frontend/lib/: api.ts
frontend/types/: api.ts
scripts/: create_test_data.py  migrate_add_drive.sql  setup_drive_auth.py
src/evergreen/agent/: a2a.py  main.py
src/evergreen/agent/agents/: customer.py  impact.py  orchestrator.py  report.py  roadmap.py
src/evergreen/agent/tools/: customer.py  roadmap.py
src/evergreen/pipeline/: database.py  embedder.py  fetcher.py  google_drive.py  main.py
src/evergreen/shared/: database.py  models.py
